--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 appnope==0.1.2
 asgiref==3.3.1
 backcall==0.2.0
+beautifulsoup4==4.9.3
 certifi==2020.12.5
 chardet==4.0.0
 decorator==4.4.2
 Django==3.1.5
+html5lib==1.1
 idna==2.10
 ipython==7.20.0
 ipython-genutils==0.2.0
 jedi==0.18.0
+lxml==4.6.2
+mechanize==0.4.5
 parso==0.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -16,7 +20,12 @@ prompt-toolkit==3.0.14
 ptyprocess==0.7.0
 Pygments==2.7.4
 pytz==2020.5
+requests==2.25.1
+selenium==3.141.0
+six==1.15.0
+soupsieve==2.2
 sqlparse==0.4.1
 traitlets==5.0.5
 urllib3==1.26.3
 wcwidth==0.2.5
+webencodings==0.5.1
